# rls-validator

./: .gitignore  .pre-commit-config.yaml  README.md  Vagrantfile  pyproject.toml  setup-dev-env.sh
.devcontainer/: devcontainer.json
.github/workflows/: lint-and-test.yml
rlsv/: __init__.py  app.py  constants.py  data.py  util.py
tests/: __init__.py  test_placeholder.py  test_util.py
